# databoard

./: pyproject.toml  readme.md
.streamlit/: config.toml
data/: boundaries.csv  boundaries.raw.csv  sections.csv  sections.raw.csv  walls.csv
databoard/: cli.py  helpers.py  run.py
databoard/reports/: intro.py  mass-flow.py
databoard/sections/: 01-intro.py  02-methods.py  03-results.py  04-discussion.py  05-conclussions.py
streamboard/: intro.py  run.py  sections.py  walls.py
streamboard/pages/: intro.py  pressure.py  shear.py  velocity.py
taviloc/: cli.py  run.py
taviloc/sections/: 01-intro.py  02-methods.py  03-results.py
