[tool.poetry]
name = "databoard"
version = "0.1.0"
description = ""
authors = ["Lewin <57636993+lewinkoon@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
